add_subdirectory(adc)
add_subdirectory(bkp)
add_subdirectory(crc)
add_subdirectory(dbgmcu)
add_subdirectory(dma)
add_subdirectory(exti)
add_subdirectory(flash)
add_subdirectory(gpio)
add_subdirectory(i2c)
add_subdirectory(iwdg)
add_subdirectory(misc)
add_subdirectory(pwr)
add_subdirectory(rtc)
add_subdirectory(spi)
add_subdirectory(tim)
add_subdirectory(usart)
add_subdirectory(usb)
add_subdirectory(usb_host)
add_subdirectory(wwdg)